--- a/index.css
+++ b/index.css
@@ -156,6 +156,7 @@ nav .sideMenuButton {
     color: black;
     font-size: 17px;
     font-weight: 600;
+    font-family: 'AuX DotBitC', sans-serif;
 }
  
 a {
