--- a/index.css
+++ b/index.css
@@ -322,7 +322,7 @@ footer {
     background: var(--primary-color);
     padding: 15px 0;
     text-align: center;
-    font-family: "Poppins", sans-serif;
+    font-family: 'AuX DotBitC', sans-serif;
 }
  
 footer .footer span {
